--- a/Views/Usuarios/CadastroView.xaml
+++ b/Views/Usuarios/CadastroView.xaml
@@ -2,14 +2,28 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.Views.Usuarios.CadastroView"
-             Title="CadastroView">
-    <VerticalStackLayout>
+             Title="">
+    <VerticalStackLayout Padding="10">
+        <Label 
+            Text="Cadastro"
+            FontSize="Large" 
+            HorizontalOptions="Center"
+        />
         <Entry Placeholder="Digite seu nome de usuário" Text ="{Binding Login}" Margin="0,10,0,0" VerticalOptions="FillAndExpand"
             HorizontalOptions="FillAndExpand">
         </Entry>
         <Entry Placeholder="Digite a senha" Text="{Binding Senha}" IsPassword="True"  Margin="0,10,0,0" VerticalOptions="FillAndExpand"
             HorizontalOptions="FillAndExpand" >
         </Entry>
-        <Button Text="Registrar" Command="{Binding RegistrarCommand}" Margin="0,10,0,0"/>
+        <Button BackgroundColor="Orange" Text="Registrar" Command="{Binding RegistrarCommand}" Margin="0,10,0,0"/>
+        <HorizontalStackLayout
+                     HorizontalOptions="Center"
+                 Spacing="20" Margin="30">
+            <Label Text="Já tem uma conta?"></Label>
+            <Label TextColor="Orange" Text="Logar" FontAttributes="Bold"></Label>
+            <HorizontalStackLayout.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding DirecionarLoginCommand}"></TapGestureRecognizer>
+            </HorizontalStackLayout.GestureRecognizers>
+        </HorizontalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
