--- a/Views/Usuarios/LoginView.xaml
+++ b/Views/Usuarios/LoginView.xaml
@@ -2,18 +2,23 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.Views.Usuarios.LoginView"
-             Title="LoginView">
-    <VerticalStackLayout>
+             Title="">
+    <VerticalStackLayout Padding="10">
+        <Label 
+            Text="Login"
+            FontSize="Large" 
+            HorizontalOptions="Center"
+        /> 
         <Entry Placeholder="Digite seu nome de usuário" Text ="{Binding Login}" Margin="0,10,0,0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"></Entry>
 
         <Entry Placeholder="Digite a senha" Text="{Binding Senha}" IsPassword="True" Margin="0,10,0,0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ></Entry>
 
-        <Button Text="Entrar" Command="{Binding AutenticarCommand}" Margin="0,10,0,0"/>
+        <Button BackgroundColor="Orange" Text="Entrar" Command="{Binding AutenticarCommand}" Margin="0,10,0,0"/>
         <HorizontalStackLayout
                      HorizontalOptions="Center"
                  Spacing="20" Margin="30">
             <Label Text="Não possui login?"></Label>
-            <Label Text="Cadastre-se" FontAttributes="Bold"></Label>
+            <Label TextColor="Orange" Text="Cadastre-se" FontAttributes="Bold"></Label>
             <HorizontalStackLayout.GestureRecognizers>
                 <TapGestureRecognizer Command="{Binding DirecionarCadastroCommand}"></TapGestureRecognizer>
             </HorizontalStackLayout.GestureRecognizers>
