--- a/Views/Personagens/ListagemView.xaml
+++ b/Views/Personagens/ListagemView.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.Views.Personagens.ListagemView"
              Title="ListagemView">
+    <Shell.TitleView>
+        <Button Command="{Binding NovoPersonagemCommand}" WidthRequest="200" BackgroundColor="Green" Text="Adicionar Personagem" HorizontalOptions="End"></Button>
+    </Shell.TitleView>
     <ScrollView>
         <VerticalStackLayout Padding="10, 0, 0, 0" VerticalOptions="FillAndExpand">
             <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Personagens}" >
