--- a/Views/Usuarios/LoginView.xaml
+++ b/Views/Usuarios/LoginView.xaml
@@ -14,6 +14,12 @@
         <Entry Placeholder="Digite a senha" Text="{Binding Senha}" IsPassword="True" Margin="0,10,0,0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ></Entry>
 
         <Button BackgroundColor="Orange" Text="Entrar" Command="{Binding AutenticarCommand}" Margin="0,10,0,0"/>
+        <ActivityIndicator x:Name="loadingIndicator"
+                           IsRunning="{Binding IsBusy}"
+                           IsVisible="{Binding IsBusy}"
+                           Color="Blue"
+                           VerticalOptions="CenterAndExpand"
+                           HorizontalOptions="CenterAndExpand"/>
         <HorizontalStackLayout
                      HorizontalOptions="Center"
                  Spacing="20" Margin="30">
