--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AppRpgEtec"
     xmlns:viewsPersonagens="clr-namespace:AppRpgEtec.Views.Personagens"
+    xmlns:viewsArmas="clr-namespace:AppRpgEtec.Views.Armas"
     Shell.FlyoutBehavior="Flyout"
     Title="AppRpgEtec">
 
@@ -12,5 +13,9 @@
         Title="Home"
         ContentTemplate="{DataTemplate viewsPersonagens:ListagemView}"
         Route="MainPage" />
+    <ShellContent
+        Title="Armas"
+        ContentTemplate="{DataTemplate viewsArmas:ListagemView}"
+        Route="Armas" />
 
 </Shell>
