--- a/Views/Usuarios/LoginView.xaml
+++ b/Views/Usuarios/LoginView.xaml
@@ -4,22 +4,24 @@
              x:Class="AppRpgEtec.Views.Usuarios.LoginView"
              Title="">
     <VerticalStackLayout Padding="10">
+        <Border HorizontalOptions="Center" StrokeShape="RoundRectangle 100" >
+            <Image 
+                Source="rpgimage.png"
+                MinimumWidthRequest="50"
+                MaximumWidthRequest="200"
+                />
+        </Border>
         <Label 
             Text="Login"
+            FontAttributes="Bold"
             FontSize="Large" 
             HorizontalOptions="Center"
-        /> 
+        />
         <Entry Placeholder="Digite seu nome de usuário" Text ="{Binding Login}" Margin="0,10,0,0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"></Entry>
 
         <Entry Placeholder="Digite a senha" Text="{Binding Senha}" IsPassword="True" Margin="0,10,0,0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ></Entry>
 
         <Button BackgroundColor="Orange" Text="Entrar" Command="{Binding AutenticarCommand}" Margin="0,10,0,0"/>
-        <ActivityIndicator x:Name="loadingIndicator"
-                           IsRunning="{Binding IsBusy}"
-                           IsVisible="{Binding IsBusy}"
-                           Color="Blue"
-                           VerticalOptions="CenterAndExpand"
-                           HorizontalOptions="CenterAndExpand"/>
         <HorizontalStackLayout
                      HorizontalOptions="Center"
                  Spacing="20" Margin="30">
