--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,35 +2,23 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.MainPage">
-
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="rpgimage.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
-
-            <Label
-                Text="RpgApi"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Bem-vindo ao RpgApi"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+    <ContentPage.Content>
+        <VerticalStackLayout Padding="25" Spacing="30">
+            <Frame
+                     BackgroundColor="{StaticResource MainColor}"
+                     HeightRequest="{OnPlatform Android=190, iOS=220}"
+                     Padding="0" HasShadow="false" CornerRadius="10">
+                <Grid>
+                    <Image Source="dotnet_bot.svg"/>
+                    <FlexLayout Direction="Row" Margin="20" AlignItems="Stretch">
+                        <Label Text="RPG App" FlexLayout.Grow="1" FontAttributes="Bold" FontSize="20" VerticalTextAlignment="Center"/>
+                        <FlexLayout FlexLayout.Grow="2" Direction="Column" AlignItems="End" JustifyContent="Center">
+                            <Label Text="Usuários" FontSize="20"/>
+                            <Button Style="{StaticResource WhiteButtonSmall}" Text="VER"/>
+                        </FlexLayout>
+                    </FlexLayout>
+                </Grid>
+            </Frame>
         </VerticalStackLayout>
-    </ScrollView>
-
+    </ContentPage.Content>
 </ContentPage>
