--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -6,16 +6,51 @@
     xmlns:local="clr-namespace:AppRpgEtec"
     xmlns:viewsPersonagens="clr-namespace:AppRpgEtec.Views.Personagens"
     xmlns:viewsArmas="clr-namespace:AppRpgEtec.Views.Armas"
-    Shell.FlyoutBehavior="Flyout"
+    xmlns:viewsUsuarios="clr-namespace:AppRpgEtec.Views.Usuarios"
     Title="AppRpgEtec">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate viewsPersonagens:ListagemView}"
-        Route="MainPage" />
-    <ShellContent
-        Title="Armas"
-        ContentTemplate="{DataTemplate viewsArmas:ListagemView}"
-        Route="Armas" />
+    <Shell.FlyoutHeaderTemplate>
+        <DataTemplate>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="{OnPlatform Android=130, iOS=200}"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                </Grid.RowDefinitions>
+                <FlexLayout Grid.Row="0" Direction="Row" AlignItems="Center" >
+                    <Frame Padding="0" CornerRadius="40" HeightRequest="80" WidthRequest="80" >
+                        <Image/>
+                    </Frame>
+                    <VerticalStackLayout Padding="10,0,0,0" Spacing="0">
+                        <Label Text="App RPG Etec" FontAttributes="Bold" FontSize="Medium" />
+                        <Label Text="Disciplina PAM-II"/>
+                    </VerticalStackLayout>
+                </FlexLayout>
+            </Grid>
+        </DataTemplate>
+        </Shell.FlyoutHeaderTemplate>
 
+    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
+        
+        <ShellContent Title="Home" Icon="home.svg"
+            ContentTemplate="{DataTemplate local:MainPage}" Route="MainPage" />
+
+        <ShellContent Title="Personagens" Icon="menupersonagens.svg"
+            ContentTemplate="{DataTemplate viewsPersonagens:ListagemView}" />
+
+        <ShellContent Title="Armas" Icon="menuarmas.svg"
+            ContentTemplate="{DataTemplate viewsArmas:ListagemView}" />
+
+        <Tab Title="Info" Route="info" Icon="info.svg">
+            <ShellContent Title="Sobre" Route="sobre" ContentTemplate="{DataTemplate local:AboutView}"/>
+            <ShellContent Title="Descrição" Route="desc" ContentTemplate="{DataTemplate local:DescriptionView}"/>
+        </Tab>
+    </FlyoutItem>
+    
+    <ShellContent Title="Sair" Icon="Exit.png" ContentTemplate="{DataTemplate viewsUsuarios:LoginView}"
+                  Shell.FlyoutBehavior="Disabled"/>
+
+    <Shell.FlyoutFooter>
+        <Label x:Name="lblLogin" TextColor="Black" FontAttributes="Bold" HorizontalOptions="Center"/>
+    </Shell.FlyoutFooter>
 </Shell>
