--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -35,6 +35,9 @@
         <ShellContent Title="Home" Icon="home.svg"
             ContentTemplate="{DataTemplate local:MainPage}" Route="MainPage" />
 
+        <ShellContent Title="Usuários" Icon="menuusuarios.svg"
+            ContentTemplate="{DataTemplate viewsUsuarios:LocalizacaoView}" />
+        
         <ShellContent Title="Personagens" Icon="menupersonagens.svg"
             ContentTemplate="{DataTemplate viewsPersonagens:ListagemView}" />
 
