--- a/Views/Usuarios/LocalizacaoView.xaml
+++ b/Views/Usuarios/LocalizacaoView.xaml
@@ -5,6 +5,17 @@
              xmlns:maps="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              Title="LocalizacaoView">
 
-    <maps:Map x:Name="mapa" ItemsSource="{Binding MeuMapa}" >
+    <maps:Map x:Name="mapa" ItemsSource="{Binding MeuMapa}"
+              MapType="Hybrid" IsShowingUser="True"
+              IsZoomEnabled="True" IsTrafficEnabled="True"
+              >
+        <maps:Map.ItemTemplate>
+            <DataTemplate>
+                <maps:Pin Location="{Binding Location}" 
+                          Address="{Binding Address}"
+                          Label="{Binding Label}"
+                          />
+            </DataTemplate>
+        </maps:Map.ItemTemplate>
     </maps:Map>
 </ContentPage>
