--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -45,7 +45,10 @@
             ContentTemplate="{DataTemplate viewsArmas:ListagemView}" />
 
         <Tab Title="Info" Route="info" Icon="info.svg">
+            <ShellContent Title="Usuário" Route="usuario" ContentTemplate="{DataTemplate viewsUsuarios:ImagemUsuarioView}"/>
+            
             <ShellContent Title="Sobre" Route="sobre" ContentTemplate="{DataTemplate local:AboutView}"/>
+            
             <ShellContent Title="Descrição" Route="desc" ContentTemplate="{DataTemplate local:DescriptionView}"/>
         </Tab>
     </FlyoutItem>
