pontos de vida converter

--- a/Views/Personagens/CadastroPersonagemView.xaml
+++ b/Views/Personagens/CadastroPersonagemView.xaml
@@ -27,7 +27,7 @@
             <Label Text="Derrotas" FontSize="Medium" />
             <Entry Text="{Binding Derrotas}" FontSize="Medium" Keyboard="Numeric" />
             <HorizontalStackLayout Spacing="20" HorizontalOptions="Center" Margin="20">
-                <Button Text="Salvar" BackgroundColor="Green" Command="{Binding SalvarCommand}"></Button>
+                <Button Text="Salvar" BackgroundColor="Green" Command="{Binding SalvarCommand}" IsEnabled="{Binding CadastroHabilitado}"></Button>
                 <Button Text="Cancelar" BackgroundColor="Red" Command="{Binding CancelarCommand}"></Button>
             </HorizontalStackLayout>
         </VerticalStackLayout>
