--- a/Views/Disputas/ListagemView.xaml
+++ b/Views/Disputas/ListagemView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.Views.Disputas.ListagemView"
              Title="ListagemView">
-    <VerticalStackLayout>
+    <VerticalStackLayout Padding="10">
         <SearchBar x:Name="searchBar" HeightRequest="25" Placeholder="Digite o nome do Personagem..."
              TextColor="Black" SearchCommand="{Binding PesquisarPersonagensCommand}"
              SearchCommandParameter="{Binding Source={x:Reference searchBar}, Path=Text}"/>
