--- a/Views/Personagens/ListagemView.xaml
+++ b/Views/Personagens/ListagemView.xaml
@@ -2,12 +2,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppRpgEtec.Views.Personagens.ListagemView"
+             xmlns:conv="clr-namespace:AppRpgEtec.Converters"
              Title="ListagemView">
     <Shell.TitleView>
         <Button Command="{Binding NovoPersonagemCommand}" WidthRequest="200" BackgroundColor="Green" Text="Adicionar Personagem" HorizontalOptions="End"></Button>
     </Shell.TitleView>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <conv:PontosVidaConverter x:Key="ColorConvert" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ScrollView>
         <VerticalStackLayout Padding="10, 0, 0, 0" VerticalOptions="FillAndExpand">
+            <Button Text="Zerar Ranking Geral" Command="{Binding ZerarRankingRestaurarVidasGeralCommand}"  FontAttributes="Bold" VerticalOptions="FillAndExpand"/>
             <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Personagens}" SelectedItem="{Binding PersonagemSelecionado}" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -17,7 +24,7 @@
                                           Command="{Binding Path=BindingContext.RemoverPersonagemCommand, Source={x:Reference listView}}"
                                           CommandParameter="{Binding .}"></MenuItem>
                             </ViewCell.ContextActions>
-                            <HorizontalStackLayout>
+                            <!--<HorizontalStackLayout>
                                 <Image
                                     Source="person.png"
                                     HeightRequest="20"
@@ -27,7 +34,24 @@
                                     <Label Text="{Binding Nome}" FontSize="18" FontAttributes="Bold"/>
                                     <Label Text="{Binding PontosVida}" FontSize="14"/>
                                 </StackLayout>
-                            </HorizontalStackLayout>
+                            </HorizontalStackLayout> -->
+                            <Grid Padding="15">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+
+                                <BoxView Grid.RowSpan="2" HeightRequest="50" WidthRequest="20"
+                                         Color="{Binding PontosVida, Converter={StaticResource ColorConvert}}"/>
+                                
+                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding Nome}" FontSize="18" FontAttributes="Bold"/>
+                                <Label Grid.Row="1" Grid.Column="1" Text="{Binding PontosVida}" FontSize="14"/>
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
